chore: upgrade to SDK 0.2.15 and sync skill docs