@@ -50,6 +50,18 @@ Agent agent = Agent.builder()
     .build();
 ```
 
+### Platform Resolution & Harness Binary Configuration
+ 
+The SDK uses a **hybrid architecture** to manage the native Go `localharness` binary across Linux (x86_64 and ARM64), macOS (Apple Silicon and Intel), and Windows (x86_64 and ARM64):
+ 
+* **1. Custom Binary Override**: Checks `ANTIGRAVITY_HARNESS_PATH` environment variable or `-Dantigravity.harness.path=/path/to/localharness`.
+* **2. Local Cache**: Checks `~/.antigravity/bin/<slice>/localharness` and its `.version` stamp.
+* **3. Embedded Classpath (Offline / Air-Gapped)**: If `antigravity-sdk-harness` (matching the platform classifier) is on the classpath, extracts the embedded binary directly without network access.
+* **4. Automatic On-Demand Download**: If not cached or bundled, `HarnessDownloader` streams the platform-specific native binary (~35-43 MB compressed) directly from upstream PyPI wheels into `~/.antigravity/bin/<slice>/` in ~1-2 seconds.
+* **Control Flags**:
+  - `antigravity.harness.download=false`: Disables remote downloads entirely (throws `FileNotFoundException` if binary is missing from cache and classpath).
+  - `antigravity.harness.path`: Direct path to native binary override.
+
 ---
 
 ## 2. Local Models & Custom Backends
@@ -714,6 +726,23 @@ try (Agent agent = new Agent(config)) {
 }
 ```
 
+---
 
+## 15. Harness Process Logging & Java 24+ Runtimes
 
+### SLF4J Harness Diagnostics
+The embedded `localharness` stdout and stderr are consumed line-by-line and routed through SLF4J:
+- Informational output (`glog` INFO, CDP discovery, permission checks) -> `log.debug(...)`
+- Warnings -> `log.warn(...)`
+- Fatal errors -> `log.error(...)`
 
+To view raw harness diagnostics, configure `io.github.glaforge.antigravity.Agent` logger level to `DEBUG`:
+```properties
+org.slf4j.simpleLogger.log.io.github.glaforge.antigravity.Agent=debug
+```
+
+### Java 24+ / GraalVM Deprecation Flag
+Under Java 24+ (JEP 471), protobuf memory-access via `sun.misc.Unsafe` produces a deprecation warning. Silence it by creating `.mvn/jvm.config`:
+```text
+--sun-misc-unsafe-memory-access=allow
+```
